<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="410dp"
                android:layout_height="55dp"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:title="@string/kost_muraahh" />
        </com.google.android.material.appbar.AppBarLayout>

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="139dp"
            android:layout_height="158dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="52dp"
            android:contentDescription="@string/kost1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/kost_1"
            tools:ignore="@string/kost1" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="198dp"
            android:layout_height="33dp"
            android:layout_marginTop="72dp"
            android:text="@string/jenaka_wanita_jw1_kost"
            android:textColor="#050505"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="194dp"
            android:layout_height="95dp"
            android:layout_marginTop="8dp"
            android:text="@string/harga_800000_fasilitas_kmd_kd_kasur_ac_wifi_24jam_loundry_tv"
            android:textColor="#050505"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/button"
            android:layout_width="106dp"
            android:layout_height="41dp"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="4dp"
            android:text="@string/pesan"
            android:onClick="Pesan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <Button
            android:id="@+id/button2"
            android:layout_width="106dp"
            android:layout_height="41dp"
            android:layout_marginTop="4dp"
            android:onClick="Pesan"
            android:text="@string/pesan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.291"
            app:layout_constraintStart_toEndOf="@+id/imageView8"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="147dp"
            android:layout_height="146dp"
            android:layout_marginTop="60dp"
            android:contentDescription="@string/kost2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4"
            app:srcCompat="@drawable/kost_2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="194dp"
            android:layout_height="30dp"
            android:layout_marginTop="24dp"
            android:text="@string/kost_sabirin_eksklusif_s1"
            android:textColor="#050505"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageView8"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="196dp"
            android:layout_height="97dp"
            android:layout_marginTop="12dp"
            android:text="@string/harga_1200000_fasilitas_ac_tv_wifi_loundry"
            android:textColor="#050505"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageView8"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>