<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pesan2Activity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="410dp"
            android:layout_height="55dp"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:title="@string/kost_muraahh" />
    </com.google.android.material.appbar.AppBarLayout>

    <Button
        android:id="@+id/button2"
        android:onClick="P2"
        android:layout_width="196dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:text="@string/konfirmasi_pesanan1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="262dp"
        android:layout_height="81dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/harga_1200000_fasilitas_ac_tv_wifi_loundry"
        android:textAlignment="center"
        android:textColor="#050505"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="267dp"
        android:layout_height="29dp"
        android:layout_marginTop="4dp"
        android:gravity="center_horizontal"
        android:text="@string/kost_sabirin_eksklusif_s1"
        android:textAlignment="center"
        android:textColor="#050505"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="410dp"
        android:layout_height="159dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/kost2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar"
        app:srcCompat="@drawable/kost_2"
        tools:ignore="@string/kost2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="238dp"
        android:layout_height="18dp"
        android:layout_marginTop="8dp"
        android:text="Masukkan No.HandPhone :"
        android:textAlignment="center"
        android:textColor="#050505"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:gravity="center_horizontal" />

    <EditText
        android:id="@+id/editTextPhone2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

</androidx.constraintlayout.widget.ConstraintLayout>
